# forge-code

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  REFACTOR_PLAN.md  pyproject.toml
docs/: parallel-execution-eval.md  resume.md
docs/superpowers/plans/: 2026-05-21-context-compression-implementation.md
docs/superpowers/specs/: 2026-05-21-context-compression-design.md
src/cli/: cancellation.py  cli.py  commands.py  completer.py  io.py
src/coding_agent/: __init__.py  banner.py  cli.py  command_policy.py  completer.py  config.py  context.py  context_manager.py  executor.py  io.py  launcher.py  memory.py  permissions.py  prompts.py  runtime.py  session.py  token_tracker.py
src/coding_agent/tools/: base.py  builtin.py  file_write.py  registry.py  search.py  shell.py
src/main/: __init__.py  compaction.py  config.py  context.py  context_manager.py  executor.py  plan_mode.py  prompts.py  pruning.py  runtime.py  session.py  token_tracker.py  truncation.py
src/mcp/: __init__.py  connection.py  manager.py  presets.py
src/memory/: __init__.py  memory.py
src/safety/: __init__.py  command_policy.py  permissions.py
src/skills/: skills.py
src/tools/: base.py  builtin.py  enter_plan_mode.py  exit_plan_mode.py  file_write.py  names.py  registry.py  search.py  shell.py  skill_tool.py  web_fetch.py  web_search.py
tests/: test_launcher.py
